Fix oversized heading on tablet

--- a/enrolment/static/sass/landing-page-mobile.scss
+++ b/enrolment/static/sass/landing-page-mobile.scss
@@ -12,7 +12,6 @@
       padding-left: 0;
       padding-right: 0;
       text-shadow: none;
-      width: auto;
       
       .sub {
         font-size: 18px;
