--- a/enrolment/static/sass/landing-page-tablet.scss
+++ b/enrolment/static/sass/landing-page-tablet.scss
@@ -6,6 +6,7 @@
   .fabhome {
     h1 {
       font-size: 36px;
+      width: auto;
       
       .sub {
         font-size: 20px;
